--- a/textcircle.html
+++ b/textcircle.html
@@ -9,12 +9,27 @@
 	     <a class="navbar-brand" href="#">Text Circle</a>
 	  </div>
 	</nav><!-- End Nav Container-->
+
 	<div class="container top-margin">
-  		{{> editor}}
+		<div class="row">
+			<div class="col-md-6">
+  				{{> editor}}
+			</div>
+
+			<div class="col-md-6">
+				{{> viewer}}
+			</div>
+		</div>
   	</div>
 </body>
 
 
 <template name="editor">
-{{>sharejsCM docid=docid id="editor"}}
+{{>sharejsCM docid=docid onRender=config id="editor"}}
+</template>
+
+<template name="viewer">
+	<iframe id="viewer_iframe">
+		
+	</iframe>
 </template>
