--- a/textcircle.html
+++ b/textcircle.html
@@ -7,6 +7,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 	  <div class="container">
 	     <a class="navbar-brand" href="#">Text Circle</a>
+	     <p class="navbar-text navbar-right">{{> loginButtons align="right"}}</p>
 	  </div>
 	</nav><!-- End Nav Container-->
 
@@ -29,7 +30,7 @@
 </template>
 
 <template name="viewer">
-	<iframe id="viewer_iframe">
+	<iframe width="500px" height="300px" id="viewer_iframe">
 		
 	</iframe>
 </template>
