--- a/textcircle.html
+++ b/textcircle.html
@@ -4,7 +4,7 @@
 
 <body>
 
-	{{> navbar}}
+	{{> head}}
 
 
 	<div class="container top-margin">
@@ -31,9 +31,9 @@
 
 
 
-<template name="navbar">
-	<nav class="navbar navbar-default navbar-fixed-top">
-		  <div class="container">
+<template name="head">
+	<nav class="navbar navbar-default navbar-fixed-top" >
+		  <div class="container" >
 		     <a class="navbar-brand" href="#">Text Circle</a>
 			    
 		     <p class="navbar-text navbar-right">{{> loginButtons align="right"}}</p>
@@ -48,9 +48,9 @@
 				     	</a>
 			     	</li>
 			     	<!--DropDown-->
-			     	<li class="dropdown">
+			     	<li class="dropdown" >
 		          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documents <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
+			          <ul class="dropdown-menu" style="background-color:#11d3bc">
 			          	{{#each documents}}
 			            <li><a href="#" class="js-load-doc">{{title}}</a></li>
 			           	{{/each}}
