Removed Package: autopublish

--- a/textcircle.html
+++ b/textcircle.html
@@ -34,7 +34,7 @@
 <template name="head">
 	<nav class="navbar navbar-default navbar-fixed-top" >
 		  <div class="container" >
-		     <a class="navbar-brand" href="#">Text Circle</a>
+		     <a class="navbar-brand" href="#">noteDown</a>
 			    
 		     <p class="navbar-text navbar-right">{{> loginButtons align="right"}}</p>
 		  	</div>
