Delete button Functionality Pending

--- a/client/textcircle.html
+++ b/client/textcircle.html
@@ -44,7 +44,7 @@
 <template name="noteHeader">
 	<ul class="nav navbar-nav" style="font-color:#537780">
 			     	<li>
-				     	<a hreg="#" class="js-add-doc"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>New Document
+				     	<a href="#" class="js-add-doc"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>New Document
 				     	</a>
 			     	</li>
 			     	<!--DropDown-->
@@ -57,6 +57,11 @@
 			          </ul>
 	        		</li>
 			     	<!--End Dropdown-->
+			     	<!--<li>
+				     	<a href="#" class="js-del-doc"><span class=" glyphicon glyphicon-trash" aria-hidden="true"></span> Discard
+				     	</a>
+			     		</li>
+			     	-->
 			    </ul>
 </template>
 
